# Lv

./: .anjuta_sym_db.db  .gitignore  :w  ;  ;w  DEADJOE  Makefile  Makefile.am  Makefile.in  README.md  TODO  config.status  configure  configure.ac  test
.anjuta/session/: anjuta.session  dock-layout.xml
libs/: llist.h
old/: buffer.c  color.h  display.h  file.h  glob.c  input.c  input.h  line.c  line.h  log.c  lv.c  lv.h  move.c  move.h  prompt.c  tty.c  utils.h  vt100.c  window.h  word.c
old/builtins/: buffer.c  o.c  w.c
old/builtins/.deps/: buffer.Po  q.Po
old/tui/: rec.c  tui.c
old/tui/.deps/: rec.Po
src/: #glob.c#  #line.c#  .#glob.c  .#line.c  Makefile  Makefile.am  Makefile.in  basic.h  basics.h  buffer.c  buffer.h  color.h  commands.c  commands.h  debugger  debugger.c  display.c  display.h  file.c  file.h  glob.c  glob.h  highlight.c  highlight.h  input.c  input.h  key.c  key.h  keys.h  line.c  line.h  log.c  log.h  lv.c  lv.h  macro.c  macro.h  main.c  move.c  move.h  (+19 more)
src/.deps/: buffer.Po  display.Po  file.Po  glob.Po  input.Po  line.Po  lv.Po  macro.Po  move.Po  tty.Po  utf8.Po  utils.Po  vt100.Po  window.Po  word.Po
src/builtins/: buffer.c  builtins.h  o.c  q.c  set.c  w.c
src/builtins/.deps/: buffer.Po  o.Po  q.Po  set.Po  w.Po
src/tui/: rec.c  rec.h  tui.c  tui.h
src/tui/.deps/: rec.Po  tui.Po
syntax/: c.lvs  cs.lvs
