AUTOMAKE_OPTIONS = foreign
SUBDIRS = src

install-data-hook:
	@echo bin dir $(bindir)
	@echo "============================================================="
	@echo "|            lv editor was successfully installed           |"
	@echo "-------------------------------------------------------------"
	@echo "|          lv was installed in $(bindir) directory.    |"
	@echo "|         Just type 'lv --help' there to get started.       |"
	@echo "============================================================="
